--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <!-- <a class=" nav-link" href="https://forms.gle/ayYvX7epU5eRXC6U6"><i class="fa fa-envelope"
               aria-hidden="true"></i> Mailing List</a> -->
-          <a class="nav-link" href="https://www.nature.com/articles/s41597-019-0052-3"><i class="fa fa-file-text"
+          <a class="nav-link" href="https://2023.ccneuro.org/proceedings/0000550.pdf?s=W&pn=1573"><i class="fa fa-file-text"
               aria-hidden="true"></i> Paper</a> 
           <li class="nav-item">
             <a class="nav-link" href="terms.html">Terms of Use</a>
