--- a/download.html
+++ b/download.html
@@ -78,10 +78,25 @@
           </p>
         </div>
         <h2>&nbsp;</h2>
-		
-		
+
+	<div class="col-md-12" style="padding-top: 20px">
+          <h2>De-identified Human Behavioral Data </h2>
+          <p class="lead mb-0"> If you would like to download our human behavioral data, please click <a
+              href="https://www.dropbox.com/s/5ie18t4rjjvsl47/BOLD5000_Stimuli.zip?dl=1">here</a>.
+          </p>
+        </div>
+        <h2>&nbsp;</h2>
+	      
+        <div class="col-md-12" style="padding-top: 20px">
+          <h2>NHP Behavioral Data </h2>
+          <p class="lead mb-0"> If you would like to download our NHP behavioral data, please click <a
+              href="https://www.dropbox.com/s/5ie18t4rjjvsl47/BOLD5000_Stimuli.zip?dl=1">here</a>.
+          </p>
+        </div>
+        <h2>&nbsp;</h2>
+	      
 		  <div class="col-md-12" style="padding-top: 20px">
-          <h2>Neural Data</h2>
+          <h2>NHP Neural Data</h2>
           <p class="lead mb-0"> If you would like to download the neural data used in the study please click <a
               href="https://www.dropbox.com/s/5ie18t4rjjvsl47/BOLD5000_Stimuli.zip?dl=1">here</a>.
           </p>
