--- a/index.html
+++ b/index.html
@@ -197,12 +197,8 @@
     <div class="container">
       <div class="row " style="text-align: left;padding-top: 20px">
         <h2>Acknowledgements</h2>
-        <p class="lead mb-0"> This dataset was collected with the support of NSF Award BCS-1439237 to Elissa M. Aminoff
-          and Michael J. Tarr, ONR MURI N000141612007 and Sloan, Okawa Fellowship to Abhinav Gupta, and NSF Award
-          BSC-1640681 to Michael Tarr.
+        <p class="lead mb-0"> SD was supported by the Bertarelli Foundation Fellowship grant. HR is funded by CIHR Postdoctoral Fellowship. GK is supported by NIH R01EY026025. KK has been supported by funds from the Canada Foundation for Innovation (CFI), the Canada Research Chair Program, the Simons Foundation Autism Research Initiative (SFARI, 967073), the Canada First Research Excellence Funds (VISTA Program), and a Google Research Award.
           <br>
-          We thank our subjects for their participation and patience, without them this dataset would not have been
-          possible.
         </p>
       </div>
     </div>
