--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
       </div>
       <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/download2.png');">
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/download.jpg');">
         </div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2 style="padding-bottom: 20px">Easy to Download</h2>
