--- a/index.html
+++ b/index.html
@@ -172,10 +172,9 @@
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/brain.png');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h2 style="padding-bottom: 20px">Largest slow event-related fMRI dataset</h2>
-          <p class="lead mb-0" style="text-align: justify">BOLD5000 is a novel, large-scale, slow event-related fMRI
-            dataset. There's over 5,000 images presented to each subject. Each subject was scanned for 16 sessions. That
-            is a total of 96 hours of scanning done for this dataset! </p>
+          <h2 style="padding-bottom: 20px">Neural and behavioral data from NHP</h2>
+          <p class="lead mb-0" style="text-align: justify">Context-600 is a novel, large-scale, neurobehavioral
+            dataset. There are 600 images presented to each subject (NHP and humans). </p>
         </div>
       </div>
       <div class="row no-gutters">
@@ -183,8 +182,8 @@
         </div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2 style="padding-bottom: 20px">Easy to Download</h2>
-          <p class="lead mb-0" style="text-align: justify">All data are readily available for download. We have raw BOLD
-            data, behavioral data, physiological data, images used as stimuli, and even labels. Download, explore, and
+          <p class="lead mb-0" style="text-align: justify">All data are readily available for download. We have human and NHP
+            behavioral data, NHP physiological data, images used as stimuli, and corresponding annnotations. Download, explore, and
             share your results. </p>
         </div>
       </div>
