--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <i class="fa fa-database m-auto text-primary"></i>
             </div>
             <h3>What is Context-600?</h3>
-            <p class="lead mb-0" style="text-align: justify">Context-600 is a large primate dataset. It contains behavioral data from 300 human participants performing binary object discrimination while the image context with respect to the target object is varied. It also contains data from the same behavioral task performed by monkeys. Furthermore, it contains data from neural recordings performed on 2 rhesus macaques, each observing 600 images over multiple sessions. Our base images are selected across 10 object categories, and from the MS COCO dataset. </p>
+            <p class="lead mb-0" style="text-align: justify">Context-600 is a large primate neurobehavioral dataset. It contains behavioral data from 300 human participants performing binary object discrimination while the image context with respect to the target object is varied. It also contains data from the same behavioral task performed by monkeys. Furthermore, it contains data from neural recordings performed on 2 rhesus macaques, each observing 600 images over multiple sessions. Our base images are selected across 10 object categories and from the MS COCO dataset. </p>
             <!-- <ol class="lead mb-0" style="text-align: left">
               <li> 1,000 images from Scene Images (with scene categories based on SUN categories) </li>
               <li> 2,000 images from the COCO dataset </li>
@@ -101,38 +101,10 @@
             </div>
             <h3>News</h3>
             <p class="lead mb-0" style="text-align: justify"> <span class="badge badge-secondary">New</span>
-              We're excited to annouce <a href="download.html">BOLD5000 Release 2.0</a> is now released! Release 2.0 is
-              complete
-              re-release of
-              functional data from BOLD5000, with optimized procedures for GLM estimation of brain-wide percent signal
-              change in response to the experimental stimuli. Release 2.0 yields significant increases in the
-              reliability of BOLD signal estimates compared to the initial data release. For updates check back
-              regularly or sign up for an
-              <a href="https://forms.gle/ayYvX7epU5eRXC6U6">update listserv</a>!
+
+              Our paper is now live on bioRXiv and has been submitted to a journal for peer review. 
             </p>
-            <!-- <p class="lead mb-0" style="text-align: justify"> <span class="badge badge-secondary">New</span>
-              Our paper was accepted by <a href="https://www.nature.com/sdata/">Scientific Data</a>!
-            </p>
-            <br>
-            <p class="lead mb-0" style="text-align: justify">
-              Processed and raw data in BIDS format, ROI masks, MRIQC reports on <a href="download.html">OpenNeuro</a>!
-            </p>
-            <p class="lead mb-0" style="text-align: justify">
-              Paper is now available on <a href="https://arxiv.org/abs/1809.01281">arXiv</a>!
-            </p>
-            <p class="lead mb-0" style="text-align: justify">
-              Vectors of brain responses to images are now available on <a href="download.html">Kilthub, Figshare</a>!
-            </p>
-            <p class="lead mb-0" style="text-align: justify">
-              t-SNE visualizations on processed data is now available for <a href="visualizations.html">viewing and
-                download</a>!
-            </p>
-            <p class="lead mb-0" style="text-align: justify">
-              Code for collecting our data is now available on <a
-                href="https://github.com/nchang430/BOLD5000-Scripts">GitHub</a>!
-            </p>
-            <p class="lead mb-0" style="text-align: justify">Raw fMRI data for BOLD5000 is available on <a
-                href="download.html">Kilthub, Figshare</a>!</p> -->
+            
           </div>
         </div>
         <div class="col-lg-4">
