--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
 
   <!-- Image Showcases -->
   <section class="showcase">
-    <div class="container-fluid p-0">
+<!--     <div class="container-fluid p-0">
       <div class="row no-gutters">
 
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/img4.png')"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2 style="padding-bottom: 20px">Diverse Images</h2>
-          <p class="lead mb-0" style="text-align: justify">We incorporate the two core values of neuroscience and
+          <p class="lead mb-0" style="text-align: justify"> We incorporate the two core values of neuroscience and
             computer vision into one dataset. From neuroscience, we have taken a careful setup of slow event-related to
             ensure a stimulus to reponse mapping. From computer vision, we have taken some of the most iconic and
             standard benchmark images. We have indoor/outdoor scenes and a lot of naturalistic images. They're
             complicated and contain object to object interaction. Explore our images and check out our rich data.</p>
         </div>
-      </div>
+      </div> -->
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/brain.png');"></div>
         <div class="col-lg-6 my-auto showcase-text">
