--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 
   <!-- Image Showcases -->
   <section class="showcase">
-<!--     <div class="container-fluid p-0">
-      <div class="row no-gutters">
+     <div class="container-fluid p-0">
+     <!-- <div class="row no-gutters">
 
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/img4.png')"></div>
+    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/img4.png')"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
           <h2 style="padding-bottom: 20px">Diverse Images</h2>
           <p class="lead mb-0" style="text-align: justify"> We incorporate the two core values of neuroscience and
